--- a/ns-pet-clinic-web/src/main/resources/templates/owner/owner.html
+++ b/ns-pet-clinic-web/src/main/resources/templates/owner/owner.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 
 <head>
     <meta charset="UTF-8">
@@ -7,19 +7,26 @@
 </head>
 <body>
 <h1>Pet Owner list</h1>
-<table>
+<table id="owners" class="table table-striped">
+    <thead>
     <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-
+        <th style="width: 150px;">ID</th>
+        <th style="width: 200px;">FirstName</th>
+        <th style="width: 200px;">LastName</th>
+        <!--<th>City</th>
+        <th style="width: 120px">Telephone</th>
+        <th>Pets</th>-->
     </tr>
-    <tr th:each="owner:${owners}">
-        <td th:text="${owner.id}"></td>
-        <td th:text="${owner.firstName}"></td>
-        <td th:text="${owner.lastName}"></td>
+    </thead>
 
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}"/>
+        <td th:text="${owner.firstName}"/>
+        <td th:text="${owner.lastName}"/>
     </tr>
+    </tbody>
+
 </table>
 </body>
 </html>
