--- a/ns-pet-clinic-web/src/main/resources/templates/vet/vets.html
+++ b/ns-pet-clinic-web/src/main/resources/templates/vet/vets.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,15 @@
 </head>
 <body>
 <h1>Vet list</h1>
-<table>
+<table id="vets" class="table table-striped">
+    <thead>
     <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th style="width: 150px;">ID</th>
+        <th style="width: 200px;" >First Name</th>
+        <th style="width: 200px;">Last Name</th>
 
     </tr>
+    </thead>
     <tr th:each="vet:${vets}">
         <td th:text="${vet.id}"></td>
         <td th:text="${vet.firstName}"></td>
